// Упрощенная схема для интернет-магазина книг (7 таблиц)
// Для использования в dbdiagram.io
// Создано на основе реальных миграций Sequelize

Table users {
  id integer [pk, increment]
  email varchar(255) [unique, not null]
  password_hash varchar(255) [not null]
  first_name varchar(100)
  last_name varchar(100)
  phone varchar(20)
  role enum [default: 'customer', note: 'customer|admin|manager']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table categories {
  id integer [pk, increment]
  name varchar(255) [unique, not null]
  slug varchar(255) [unique, not null] 
  description text
  parent_id integer [ref: > categories.id, note: 'Иерархия категорий']
  is_active boolean [default: true]
  sort_order integer [default: 0]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table publishers {
  id integer [pk, increment]
  name varchar(255) [unique, not null]
  description text
  website varchar(500)
  contact_email varchar(255)
  founded_year integer
  country varchar(100)
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table authors {
  id integer [pk, increment]
  first_name varchar(100) [not null]
  last_name varchar(100) [not null]
  biography text
  birth_date date
  death_date date
  nationality varchar(100)
  website varchar(500)
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table books {
  id integer [pk, increment]
  title varchar(255) [not null]
  isbn varchar(20) [unique]
  publisher_id integer [ref: > publishers.id]
  category_id integer [ref: > categories.id, not null]
  price decimal(10,2) [not null]
  stock integer [default: 0]
  description text
  short_description text
  image varchar(255)
  pages integer
  publication_year integer
  popularity integer [default: 0]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table book_authors {
  id integer [pk, increment]
  book_id integer [ref: > books.id, not null]
  author_id integer [ref: > authors.id, not null]
  role enum [default: 'main_author', note: 'main_author|co_author|translator|editor']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  
  Indexes {
    (book_id, author_id, role) [unique]
  }
}

Table cart_items {
  id integer [pk, increment]
  user_id integer [ref: > users.id, not null]
  book_id integer [ref: > books.id, not null]
  quantity integer [default: 1]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  
  Indexes {
    (user_id, book_id) [unique]
  }
}

// Связи и комментарии
Note: '''
# Упрощенная схема интернет-магазина книг (7 таблиц)

## Основные сущности:
- **users**: Пользователи с ролями (customer, admin, manager)
- **categories**: Иерархические категории книг
- **publishers**: Издательства с контактной информацией
- **authors**: Авторы с биографическими данными
- **books**: Книги с полной информацией (ISBN, цены, остатки)
- **book_authors**: Связь книг и авторов (many-to-many)
- **cart_items**: Корзина покупок пользователей

## Удаленные таблицы (упрощение):
- ❌ orders, order_items (система заказов)
- ❌ reviews (отзывы пользователей)
- ❌ wishlist (список желаний)

## Ключевые особенности:
- 🔗 Иерархия категорий (self-reference)
- 📚 Один издатель → много книг
- 🏷️ Одна категория → много книг
- ✍️ Много авторов ↔ много книг (через book_authors с ролями)
- 🛒 Один пользователь → много позиций корзины
- 🔐 Уникальные индексы для предотвращения дублирования

## Для использования:
1. Скопируйте этот код
2. Вставьте в dbdiagram.io
3. Получите визуальную схему БД

## Версия: v1.0 (упрощенная)
## Дата создания: 17 октября 2025
'''